fix: preserve null values in question OKF compilation